--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,10 @@
       rgba(0, 0, 0, 0.4) 0 10px 15px -3px, rgba(0, 0, 0, 0.25) 0 4px 6px -2px;
   }
 
+  body {
+    color: var(--text);
+  }
+
   #social .button-icon {
     filter: invert(1) brightness(2);
   }
